[package]
name = "calculator-wasm-rust-pwa"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.33.3", default-features = false, features = ["default_fonts", "glow", "persistence"] }

[profile.release]
opt-level = 2 # fast and small wasm
codegen-units = 1
lto = true
panic = "abort"

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2